# orion

./: .dockerignore  .env.example  .gitignore  .golangci.yml  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  go.mod  go.sum  orion.code-workspace  pyproject.toml  zensical.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  db-migration.md  orion-check-versions.md  orion-provider.md  orion-service-scaffold.md  service-scaffolder.md  test-runner.md  version-checker.md
.claude/rules/: commit-jira.md  design-patterns.md  docker-infra.md  go-services.md  nextjs-dashboard.md  python-services.md  tech-stack.md
.cursor/rules/: commit-jira.mdc  design-patterns.mdc  docker-infra.mdc  docker-modern.mdc  go-services.mdc  (+8 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.overstory/: config.yaml
cli/: pyproject.toml
cli/src/orion_cli/: __init__.py  client.py  config.py  main.py  output.py
cli/src/orion_cli/commands/: __init__.py  admin.py  auth.py  content.py  pipeline.py  publish.py  scout.py  system.py
cli/src/orion_cli/models/: __init__.py
cli/tests/: conftest.py  test_client.py  test_config.py  test_output.py
cli/tests/test_commands/: test_admin.py  test_auth.py  test_content.py  test_pipeline.py  test_publish.py  test_scout.py  test_system.py
dashboard/: DESIGN_SYSTEM.md  Dockerfile  ICON_MAPPING.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
deploy/: Dockerfile.gateway  alertmanager.yml  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.monitoring.yml  docker-compose.yml  pgadmin-servers.json  prometheus.yml
docs/: CONFLUENCE_TECH_STACK_UPDATE.md  TECH_STACK.md  design-brief.md  design-prototype.html  index.md
libs/orion-common/: pyproject.toml
libs/orion-common/orion_common/: __init__.py  auth.py  cache.py  config.py  event_bus.py  event_retry.py  events.py  health.py  logging.py  middleware.py  milvus_client.py  redis_client.py
libs/orion-common/orion_common/db/: __init__.py  models.py  session.py
libs/orion-common/tests/: test_cache.py  test_config.py  test_event_retry.py  test_events.py
migrations/: alembic.ini  env.py
scripts/: db-backup.sh  db-migrate.sh  db-restore.sh  generate_dummy_data.py  seed-db.sh  seed_dummy_data.py  setup.sh  wsl-metrics-collector.py
services/director/: CLAUDE.md  Dockerfile  pyproject.toml
services/director/src/: main.py  metrics.py  schemas.py
services/director/src/agents/: __init__.py  analyst.py  critique_agent.py  script_generator.py  visual_prompter.py
services/director/src/graph/: __init__.py  builder.py  edges.py  hitl.py  nodes.py  state.py
services/director/src/memory/: __init__.py  embeddings.py  vector_store.py
services/director/src/providers/: __init__.py  base.py  cloud.py  factory.py  ollama.py
services/director/src/repositories/: __init__.py  content_repo.py
services/director/src/routes/: __init__.py  content.py
services/director/src/services/: __init__.py  pipeline.py  regeneration.py
services/director/tests/test_agents/: test_analyst.py
services/director/tests/test_graph/: conftest.py  test_analyst.py  test_builder.py  test_edges.py  test_hitl.py  test_nodes.py  test_state.py
services/editor/: CLAUDE.md  Dockerfile  pyproject.toml
services/editor/src/: main.py  schemas.py
services/editor/src/captions/: __init__.py  formatter.py  whisper_stt.py
services/editor/src/providers/: __init__.py  base.py  elevenlabs.py  factory.py  fish_speech.py
services/editor/src/repositories/: __init__.py  asset_repo.py
services/editor/src/routes/: __init__.py  render.py
services/editor/src/services/: __init__.py  render_pipeline.py
services/editor/src/video/: __init__.py  effects.py  stitcher.py  subtitles.py  thumbnails.py  validator.py
services/editor/tests/: conftest.py  test_api.py  test_render.py  test_tts.py
services/identity/: CLAUDE.md  Dockerfile  pyproject.toml
services/identity/src/identity/: config.py  main.py
services/identity/src/identity/repositories/: user_repo.py
services/identity/src/identity/routes/: auth.py  users.py
services/identity/src/identity/services/: auth_service.py  cleanup.py  email_service.py
services/identity/tests/: conftest.py  test_routes.py
services/pulse/: CLAUDE.md  Dockerfile  pyproject.toml
services/pulse/src/: main.py  metrics.py  schemas.py
services/pulse/src/repositories/: __init__.py  cost_repo.py  event_repo.py
services/pulse/src/routes/: __init__.py  analytics.py  costs.py  pipeline.py
services/pulse/src/services/: __init__.py  cleanup.py  cost_tracker.py  event_aggregator.py
services/pulse/tests/: conftest.py  test_api.py  test_cost.py  test_metrics.py
services/scout/: CLAUDE.md  Dockerfile  pyproject.toml
services/scout/src/: main.py  scheduler.py  schemas.py
services/scout/src/filters/: __init__.py  deduplication.py  niche_filter.py
services/scout/src/providers/: __init__.py  base.py  google_trends.py  rss.py  twitter.py
services/scout/src/repositories/: __init__.py  trend_repo.py
services/scout/src/routes/: __init__.py  trends.py
services/scout/tests/: conftest.py  test_api.py  test_scoring.py  test_scraper.py
(+346 files in other folders)
