[project]
name = "orion"
version = "0.1.0"
requires-python = ">=3.12"
description = "Project Orion monorepo"

[dependency-groups]
docs = ["zensical>=0.0.26"]

[tool.uv.workspace]
members = [
    "services/scout",
    "services/director",
    "services/media",
    "services/editor",
    "services/pulse",
    "services/publisher",
    "libs/orion-common",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
