[project]
name = "orion"
version = "0.1.0"
requires-python = ">=3.12"
description = "Project Orion monorepo"

[dependency-groups]
docs = ["zensical>=0.0.26"]
benchmark = [
    "pytest>=8.3.0",
    "pytest-benchmark>=5.0.0",
    "locust>=2.32.0",
    "httpx>=0.27.0",
    "redis[hiredis]>=5.0.0",
]

[tool.uv.workspace]
members = [
    "services/scout",
    "services/director",
    "services/media",
    "services/editor",
    "services/pulse",
    "services/publisher",
    "services/identity",
    "libs/orion-common",
    "cli",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
