[project]
name = "orion-common"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.0.0",
    "redis[hiredis]>=5.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pymilvus>=2.4.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "prometheus-client>=0.20.0",
]
