[project]
name = "orion-director"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "orion-common @ file:../../libs/orion-common",
    "langgraph>=0.2.0,<0.3.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.1.0",
]
