[project]
name = "orion-editor"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "orion-common @ file:../../libs/orion-common",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "faster-whisper>=1.1.0",
    "Pillow>=11.0.0",
]
