[project]
name = "orion-scout"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "orion-common",
    "pytrends>=4.9.0",
    "apscheduler>=4.0.0a5",
    "feedparser>=6.0.0",
    "httpx>=0.27.0",
    "tweepy>=4.14.0",
    "thefuzz>=0.22.0",
]

[tool.uv.sources]
orion-common = { workspace = true }
